# auth_service

./: .dockerignore  .env  .env.template  .env.test  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  alembic.ini  docker-compose-ci.yml  docker-compose-test.yml  docker-compose.yml  nginx.conf  pyproject.toml  pytest.ini
src/: main.py
src/alembic/: env.py
src/alembic/versions/: 26cb178e6420_edited_type_id.py  41be587ab381_edited_table_user.py
src/auth/api/: __init__.py  auth_router.py  dependencies.py  token_router.py
src/auth/exception/: __init__.py  exception.py  pydantic_exception_handler.py  server_exception_handler.py  token_exception_handler.py  user_exception_handler.py
src/auth/models/: user.py
src/auth/schemas/: __init__.py  jwt_token.py  user.py
src/auth/service/: __init__.py
src/auth/service/business/: __init__.py  email_manager.py  redis_manager.py  user_auth.py
src/auth/service/repository/: base_repository.py  user_data.py  user_repository.py
src/auth/utils/hash_password/: hashing.py
src/auth/utils/jwt/: jwt_manager.py  jwt_service.py
src/core/: __init__.py  config.py
src/core/celery/: config.py
src/core/db/: __init__.py  base_model.py  config.py
src/core/email/: config.py
src/core/redis/: __init__.py  config.py
src/logger/: config.py
src/static/templates/: email_message.html
src/tasks/: tasks.py
tests/: conftest.py
tests/api/auth/: test_auth.py
tests/e2e/auth/: test_auth.py
tests/parametrize_data/: auth_data.py
tests/unit/hash/: test_hash.py
tests/unit/jwt/: test_jwt.py
