[project]
name = "authentication"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosmtplib>=4.0.2",
    "alembic>=1.16.4",
    "asyncpg>=0.30.0",
    "bcrypt>=4.3.0",
    "celery>=5.5.3",
    "cryptography>=45.0.6",
    "email-validator>=2.2.0",
    "emails>=0.6",
    "fastapi[standart]>=0.116.1",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "orjson>=3.11.2",
    "pydantic-settings>=2.10.1",
    "pydantic[email]>=2.11.7",
    "pyjwt>=2.10.1",
    "pyright>=1.1.406",
    "redis>=6.4.0",
    "ruff>=0.12.12",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.35.0",
]
